--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "server": "json-server server.json -w -d 750 -p 3333",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.1",
     "date-fns": "^2.28.0",
     "next": "12.1.5",
     "react": "18.0.0",
@@ -20,6 +22,7 @@
     "@types/react": "^18.0.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "json-server": "^0.17.0",
     "typescript": "^4.6.3"
   }
 }
